import { FernIr } from "@fern-fern/ir-sdk";
import { TypeReferenceNode } from "@fern-typescript/commons";
import {
    caseConverter,
    createDeclaredTypeName,
    createNamedTypeReference,
    createObjectProperty
} from "@fern-typescript/test-utils";
import { Project, ts } from "ts-morph";
import { describe, expect, it } from "vitest";

import { GeneratedObjectTypeImpl } from "../object/GeneratedObjectTypeImpl.js";

const STRING = FernIr.TypeReference.primitive({ v1: "STRING", v2: undefined });
const INTEGER = FernIr.TypeReference.primitive({ v1: "INTEGER", v2: undefined });

function optional(inner: FernIr.TypeReference): FernIr.TypeReference {
    return FernIr.TypeReference.container(FernIr.ContainerType.optional(inner));
}

function nullable(inner: FernIr.TypeReference): FernIr.TypeReference {
    return FernIr.TypeReference.container(FernIr.ContainerType.nullable(inner));
}

function list(inner: FernIr.TypeReference): FernIr.TypeReference {
    return FernIr.TypeReference.container(FernIr.ContainerType.list(inner));
}

function set(inner: FernIr.TypeReference): FernIr.TypeReference {
    return FernIr.TypeReference.container(FernIr.ContainerType.set(inner));
}

function xmlProperty(
    name: string,
    valueType: FernIr.TypeReference,
    xml: Partial<FernIr.XmlPropertyEncoding> & { kind: FernIr.XmlPropertyKind }
): FernIr.ObjectProperty {
    return {
        ...createObjectProperty(name, valueType),
        xml: { name: undefined, wrapped: undefined, listSeparator: undefined, ...xml }
    };
}

function xmlObjectDeclaration(
    name: string,
    properties: FernIr.ObjectProperty[],
    xml: FernIr.XmlEncoding
): FernIr.TypeDeclaration {
    return {
        name: createDeclaredTypeName(name),
        shape: FernIr.Type.object({
            properties,
            extends: [],
            extraProperties: false,
            extendedProperties: undefined,
            deferredUnionBaseProperties: undefined
        }),
        referencedTypes: new Set<string>(),
        encoding: { json: undefined, proto: undefined, xml },
        autogeneratedExamples: [],
        userProvidedExamples: [],
        v2Examples: undefined,
        docs: undefined,
        availability: undefined,
        source: undefined,
        inline: undefined
    };
}

function typeRefNode(typeNode: ts.TypeNode, isOptional = false): TypeReferenceNode {
    return {
        isOptional,
        typeNode: isOptional
            ? ts.factory.createUnionTypeNode([
                  typeNode,
                  ts.factory.createKeywordTypeNode(ts.SyntaxKind.UndefinedKeyword)
              ])
            : typeNode,
        typeNodeWithoutUndefined: typeNode,
        requestTypeNode: undefined,
        requestTypeNodeWithoutUndefined: undefined,
        responseTypeNode: undefined,
        responseTypeNodeWithoutUndefined: undefined
    };
}

function pascalName(typeName: FernIr.DeclaredTypeName): string {
    return caseConverter.pascalSafe(typeName.name);
}

function referenceNodeFor(
    typeRef: FernIr.TypeReference,
    declarations: Map<string, FernIr.TypeDeclaration>
): TypeReferenceNode {
    switch (typeRef.type) {
        case "primitive":
            return typeRefNode(
                ts.factory.createKeywordTypeNode(
                    typeRef.primitive.v1 === "STRING" ? ts.SyntaxKind.StringKeyword : ts.SyntaxKind.NumberKeyword
                )
            );
        case "named": {
            const declaration = declarations.get(typeRef.typeId);
            return typeRefNode(
                ts.factory.createTypeReferenceNode(declaration != null ? pascalName(declaration.name) : typeRef.typeId)
            );
        }
        case "container": {
            const container = typeRef.container;
            if (container.type === "optional") {
                const inner = referenceNodeFor(container.optional, declarations);
                return typeRefNode(inner.typeNodeWithoutUndefined, true);
            }
            if (container.type === "nullable") {
                const inner = referenceNodeFor(container.nullable, declarations);
                return typeRefNode(
                    ts.factory.createUnionTypeNode([
                        inner.typeNodeWithoutUndefined,
                        ts.factory.createLiteralTypeNode(ts.factory.createNull())
                    ])
                );
            }
            if (container.type === "list") {
                const inner = referenceNodeFor(container.list, declarations);
                return typeRefNode(ts.factory.createArrayTypeNode(inner.typeNodeWithoutUndefined));
            }
            if (container.type === "set") {
                const inner = referenceNodeFor(container.set, declarations);
                return typeRefNode(ts.factory.createTypeReferenceNode("Set", [inner.typeNodeWithoutUndefined]));
            }
            throw new Error(`Unsupported container in test: ${container.type}`);
        }
        case "unknown":
            return typeRefNode(ts.factory.createKeywordTypeNode(ts.SyntaxKind.UnknownKeyword));
    }
}

function createMockContext(declarations: FernIr.TypeDeclaration[]) {
    const project = new Project({ useInMemoryFileSystem: true });
    const sourceFile = project.createSourceFile("test.ts", "");
    const byId = new Map(declarations.map((declaration) => [declaration.name.typeId, declaration]));
    const getReferenceToType = (typeRef: FernIr.TypeReference) => referenceNodeFor(typeRef, byId);
    return {
        sourceFile,
        case: caseConverter,
        coreUtilities: {
            xml: {
                getReferenceToExport: (name: string) => ({
                    getExpression: () => ts.factory.createIdentifier(`core.xml.${name}`),
                    getTypeNode: () => ts.factory.createTypeReferenceNode(`core.xml.${name}`)
                })
            }
        },
        type: {
            getReferenceToType,
            getReferenceToInlinePropertyType: getReferenceToType,
            getReferenceToTypeForInlineUnion: getReferenceToType,
            getReferenceToNamedType: (typeName: FernIr.DeclaredTypeName) => {
                const name = pascalName(typeName);
                return {
                    getTypeNode: () => ts.factory.createTypeReferenceNode(name),
                    getExpression: () => ts.factory.createIdentifier(name),
                    getEntityName: () => ts.factory.createIdentifier(name)
                };
            },
            getTypeDeclaration: (typeName: FernIr.DeclaredTypeName): FernIr.TypeDeclaration => {
                const declaration = byId.get(typeName.typeId);
                if (declaration == null) {
                    throw new Error(`Unknown type ${typeName.typeId}`);
                }
                return declaration;
            },
            getGeneratedType: () => ({
                type: "object",
                generateStatements: () => [],
                getAllPropertiesIncludingExtensions: () => [],
                getPropertyKey: ({ propertyWireKey }: { propertyWireKey: string }) => propertyWireKey
            })
        }
        // biome-ignore lint/suspicious/noExplicitAny: test mock with minimal interface
    } as any;
}

function generate(
    declaration: FernIr.TypeDeclaration,
    others: FernIr.TypeDeclaration[],
    { noOptionalProperties = false }: { noOptionalProperties?: boolean } = {}
): string {
    if (declaration.shape.type !== "object" || declaration.encoding?.xml == null) {
        throw new Error("test declaration must be an xml object");
    }
    const typeName = pascalName(declaration.name);
    const generator = new GeneratedObjectTypeImpl({
        typeName,
        shape: declaration.shape,
        examples: [],
        docs: declaration.docs,
        fernFilepath: declaration.name.fernFilepath,
        getReferenceToSelf: () => ({
            getTypeNode: () => ts.factory.createTypeReferenceNode(typeName),
            getExpression: () => ts.factory.createIdentifier(typeName),
            getEntityName: () => ts.factory.createIdentifier(typeName)
        }),
        includeSerdeLayer: false,
        noOptionalProperties,
        retainOriginalCasing: false,
        enableInlineTypes: true,
        generateReadWriteOnlyTypes: false,
        caseConverter,
        xml: declaration.encoding.xml,
        useBigInt: false
    });
    const context = createMockContext([declaration, ...others]);
    context.sourceFile.addStatements(generator.generateStatements(context));
    return context.sourceFile.getFullText();
}

const breakDeclaration = xmlObjectDeclaration("Break", [xmlProperty("time", optional(STRING), { kind: "ATTRIBUTE" })], {
    name: "break",
    namespace: undefined,
    prefix: undefined
});

const sayDeclaration = xmlObjectDeclaration(
    "Say",
    [
        xmlProperty("message", optional(STRING), { kind: "TEXT" }),
        xmlProperty("voice", optional(STRING), { kind: "ATTRIBUTE" }),
        xmlProperty("loop", optional(INTEGER), { kind: "ATTRIBUTE" }),
        xmlProperty("children", optional(list(createNamedTypeReference("Break"))), { kind: "ELEMENT" })
    ],
    { name: "Say", namespace: undefined, prefix: undefined }
);

const numberDeclaration = xmlObjectDeclaration(
    "Number",
    [xmlProperty("phone_number", optional(STRING), { kind: "TEXT" })],
    { name: "Number", namespace: undefined, prefix: undefined }
);

const dialDeclaration = xmlObjectDeclaration(
    "Dial",
    [
        xmlProperty("number", optional(STRING), { kind: "TEXT" }),
        xmlProperty("status_callback_event", optional(list(STRING)), {
            kind: "ATTRIBUTE",
            name: "statusCallbackEvent",
            listSeparator: " "
        }),
        xmlProperty("numbers", optional(list(createNamedTypeReference("Number"))), {
            kind: "ELEMENT",
            name: "Numbers",
            wrapped: true
        })
    ],
    { name: "Dial", namespace: "https://www.twilio.com/twiml", prefix: "tw" }
);

const collectionsDeclaration = xmlObjectDeclaration(
    "Collections",
    [
        xmlProperty("label", nullable(STRING), { kind: "ATTRIBUTE" }),
        xmlProperty("note", optional(nullable(STRING)), { kind: "TEXT" }),
        xmlProperty("tags", optional(set(STRING)), { kind: "ATTRIBUTE", listSeparator: "," }),
        xmlProperty("breaks", set(createNamedTypeReference("Break")), { kind: "ELEMENT" }),
        xmlProperty("pause", nullable(createNamedTypeReference("Break")), { kind: "ELEMENT", name: "Pause" })
    ],
    { name: "Collections", namespace: undefined, prefix: undefined }
);

const labelDeclaration = xmlObjectDeclaration(
    "Label",
    [
        xmlProperty("font-size", optional(STRING), { kind: "ATTRIBUTE" }),
        xmlProperty("text-align", STRING, { kind: "ATTRIBUTE" }),
        xmlProperty("default", optional(STRING), { kind: "ATTRIBUTE" }),
        xmlProperty("line-break", optional(list(createNamedTypeReference("Break"))), { kind: "ELEMENT" }),
        xmlProperty("inner-text", optional(STRING), { kind: "TEXT" }),
        xmlProperty("fontSize", optional(STRING), { kind: "ATTRIBUTE" }),
        xmlProperty("textAlign", STRING, { kind: "ATTRIBUTE" }),
        xmlProperty("lineBreak", optional(list(createNamedTypeReference("Break"))), { kind: "ELEMENT" })
    ],
    { name: "label", namespace: undefined, prefix: undefined }
);

function syntaxErrors(source: string): string[] {
    const project = new Project({ useInMemoryFileSystem: true });
    const sourceFile = project.createSourceFile("check.ts", source);
    return sourceFile
        .getPreEmitDiagnostics()
        .filter((diagnostic) => diagnostic.getCategory() === ts.DiagnosticCategory.Error && diagnostic.getCode() < 2000)
        .map((diagnostic) => `${diagnostic.getLineNumber()}: ${diagnostic.getMessageText()}`);
}

describe("XmlObjectGenerator", () => {
    it("uses bracket access and unique safe locals for property keys that are not identifiers", () => {
        const output = generate(labelDeclaration, [breakDeclaration]);
        expect(syntaxErrors(output)).toEqual([]);
        expect(output).toMatchSnapshot();
    });

    it("generates a root element with text, attributes and typed children", () => {
        expect(generate(sayDeclaration, [breakDeclaration])).toMatchSnapshot();
    });

    it("generates a nested element with namespace, wrapped list and separator, using add-prefix on collisions", () => {
        expect(generate(dialDeclaration, [numberDeclaration])).toMatchSnapshot();
    });

    it("distinguishes nullable from optional and supports set-valued properties", () => {
        expect(generate(collectionsDeclaration, [breakDeclaration])).toMatchSnapshot();
    });

    it("keeps optional keys required when noOptionalProperties is enabled", () => {
        expect(generate(sayDeclaration, [breakDeclaration], { noOptionalProperties: true })).toMatchSnapshot();
    });

    it("leaves non-xml objects as interfaces", () => {
        const plain: FernIr.TypeDeclaration = {
            ...xmlObjectDeclaration("Plain", [createObjectProperty("id", optional(STRING))], {
                name: "Plain",
                namespace: undefined,
                prefix: undefined
            }),
            encoding: undefined
        };
        if (plain.shape.type !== "object") {
            throw new Error("expected object");
        }
        const generator = new GeneratedObjectTypeImpl({
            typeName: "Plain",
            shape: plain.shape,
            examples: [],
            docs: undefined,
            fernFilepath: plain.name.fernFilepath,
            getReferenceToSelf: () => ({
                getTypeNode: () => ts.factory.createTypeReferenceNode("Plain"),
                getExpression: () => ts.factory.createIdentifier("Plain"),
                getEntityName: () => ts.factory.createIdentifier("Plain")
            }),
            includeSerdeLayer: false,
            noOptionalProperties: false,
            retainOriginalCasing: false,
            enableInlineTypes: true,
            generateReadWriteOnlyTypes: false,
            caseConverter
        });
        const context = createMockContext([plain]);
        context.sourceFile.addStatements(generator.generateStatements(context));
        expect(context.sourceFile.getFullText()).toMatchSnapshot();
    });
});
